--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TRPG_TRY</string>
+    <string name="main_session_title">세션</string>
+    <string name="main_character_title">캐릭터</string>
+
 </resources>
